# git-browser

./: .gitignore  CLAUDE.md  LICENSE  LOCAL_TESTING.md  MANIFEST.in  PUBLISHING.md  README.md  USAGE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-pypi.yml  test.yml
frontend/: 2025-12-17-when-i-click-on-commit-code-must-be-display-commi.txt  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BranchList.jsx  CommitDetails.jsx  CommitDetailsModal.jsx  CommitList.jsx  ComparisonView.jsx  DiffViewer.jsx  FileList.jsx  FileTree.jsx  GitGraph.jsx  Header.jsx  Layout.jsx  Modal.jsx  RepoSidebar.jsx  SearchFilter.jsx  Sidebar.jsx  ThemeToggle.jsx  ViewToggle.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/pages/: BranchesPage.jsx  CommitsPage.jsx  GraphPage.jsx  SettingsPage.jsx  StatusPage.jsx  Workbench.jsx
frontend/src/services/: api.js
frontend/src/views/: History.jsx  WorkingCopy.jsx
git_browser/: __init__.py  cli.py  git_client.py
git_browser/api/: routes.py  server.py
git_browser/git_parser/: models.py  objects.py  parser.py
